--- a/.travis.yml
+++ b/.travis.yml
@@ -4,13 +4,14 @@ php:
   - 5.5
   - 5.6
   - hhvm
-  - 7.0
+  - 7
+
+install: travis_retry composer install --no-interaction --prefer-source
 
 script:
- - composer self-update
- - composer install --prefer-source
- - phpunit --coverage-text --coverage-clover=coverage.clover
+ - if [ "$TRAVIS_PHP_VERSION" == "hhvm" ]; then phpunit; fi
+ - if [ "$TRAVIS_PHP_VERSION" != "hhvm" ]; then phpunit --coverage-text --coverage-clover=coverage.clover; fi
 
 after_script:
  - wget https://scrutinizer-ci.com/ocular.phar
- - php ocular.phar code-coverage:upload --format=php-clover coverage.clover
+ - if [ "$TRAVIS_PHP_VERSION" != "hhvm" ]; then php ocular.phar code-coverage:upload --format=php-clover coverage.clover; fi
