--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,12 @@
     "authors": [
         {
             "name": "Akihito Koriyama",
-            "email": "akihito.koriyama@gmail.com"
+            "email": "akihito.koriyama@gmail.com",
+            "homepage": "https://koriym.github.io/"
+        },
+        {
+            "name": "BEAR.Sunday Contributors",
+            "homepage": "http://bearsunday.github.io/contributors.html"
         }
     ],
     "require": {
