--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,15 @@
+sudo: false
 language: php
-
 php:
   - 5.5
   - 5.6
   - hhvm
   - 7
-
-install: travis_retry composer install --no-interaction --prefer-source
-
+before_script:
+  - composer self-update
+  - composer install
 script:
- - if [ "$TRAVIS_PHP_VERSION" == "hhvm" ]; then phpunit; fi
- - if [ "$TRAVIS_PHP_VERSION" != "hhvm" ]; then phpunit --coverage-text --coverage-clover=coverage.clover; fi
-
+  - phpunit --coverage-clover=coverage.clover
 after_script:
- - wget https://scrutinizer-ci.com/ocular.phar
- - if [ "$TRAVIS_PHP_VERSION" != "hhvm" ]; then php ocular.phar code-coverage:upload --format=php-clover coverage.clover; fi
+  - wget https://scrutinizer-ci.com/ocular.phar
+  - php ocular.phar code-coverage:upload --format=php-clover coverage.clover
