autoload-dev load for dev-only functions

--- a/composer.json
+++ b/composer.json
@@ -31,5 +31,8 @@
         "psr-4": {
             "BEAR\\Sunday\\": "src/"
         }
+    },
+    "autoload-dev": {
+        "files": ["tests/functions.php"]
     }
 }
