--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,17 @@
-sudo: false
 language: php
 php:
-  - 5.5
   - 5.6
+  - 7.0
   - hhvm
-  - 7
+sudo: false
+cache:
+  directories:
+    - $HOME/.composer/cache
 before_script:
   - composer self-update
   - composer install
 script:
-  - phpunit --coverage-clover=coverage.clover
+  - phpunit
 after_script:
   - wget https://scrutinizer-ci.com/ocular.phar
-  - php ocular.phar code-coverage:upload --format=php-clover coverage.clover
+  - if [ "$TRAVIS_PHP_VERSION" != "hhvm" ]; then php ocular.phar code-coverage:upload --format=php-clover coverage.clover; fi
