--- a/composer.json
+++ b/composer.json
@@ -23,11 +23,16 @@
     ],
     "require": {
         "php": ">=5.6.0",
-        "bear/resource": "~1.4",
-        "doctrine/cache": "~1.0",
-        "psr/log": "~1.0"
+        "bear/resource": "^1.4.1",
+        "doctrine/cache": "^1.6.1",
+        "psr/log": "^1.0.2"
     },
-    "autoload": {
+  "require-dev": {
+        "phpunit/phpunit": "~5.7 < 6.0",
+        "squizlabs/php_codesniffer": "^2.8",
+        "phpmd/phpmd": "^2.6"
+  },
+  "autoload": {
         "psr-4": {
             "BEAR\\Sunday\\": "src/"
         }
