--- a/composer.json
+++ b/composer.json
@@ -22,15 +22,12 @@
         }
     ],
     "require": {
-        "php": ">=5.6.0",
-        "bear/resource": "^1.4.1",
-        "doctrine/cache": "^1.6.1",
+        "php": ">=7.0.0",
+        "bear/resource": "^1.6",
         "psr/log": "^1.0.2"
     },
   "require-dev": {
-        "phpunit/phpunit": "~5.7 < 6.0",
-        "squizlabs/php_codesniffer": "^2.8",
-        "phpmd/phpmd": "^2.6"
+        "phpunit/phpunit": "^6.2"
   },
   "autoload": {
         "psr-4": {
