--- a/composer.json
+++ b/composer.json
@@ -32,9 +32,7 @@
         "psr-4": {
             "BEAR\\Sunday\\": "src/"
         },
-        "autoload": {
-            "exclude-from-classmap": ["/docs/", "/tests/"]
-        }
+        "exclude-from-classmap": ["/example/", "/tests/"]
     },
     "autoload-dev": {
         "files": ["tests/functions.php"]
