--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
   ],
   "require": {
       "php": "^7.0",
-      "bear/resource": "^1.6",
+      "bear/resource": "^1.9.2",
       "psr/log": "^1.0.2"
   },
   "require-dev": {
@@ -35,6 +35,7 @@
   },
   "autoload-dev": {
       "psr-4": {
+        "BEAR\\Sunday\\": ["tests/", "tests/Fake/"],
         "FakeVendor\\HelloWorld\\": "tests/Fake/Apps/FakeVendor/HelloWorld/",
         "FakeVendor\\HelloWorldX\\": "tests/Fake/Apps/FakeVendor/HelloWorldX/"
       },
