--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
       {
           "name": "Akihito Koriyama",
           "email": "akihito.koriyama@gmail.com",
-          "homepage": "https://github.com/koriym"
+          "homepage": "http://koriym.github.io/about/"
       },
       {
           "name": "BEAR.Sunday Contributors",
@@ -21,7 +21,7 @@
       }
   ],
   "require": {
-      "php": "^7.0",
+      "php": ">=7.0.0",
       "bear/resource": "^1.9.2",
       "psr/log": "^1.0.2"
   },
