--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
   ],
   "require": {
       "php": ">=7.0.0",
-      "bear/resource": "^1.9.2",
+      "bear/resource": "^1.11.1",
       "psr/log": "^1.0.2"
   },
   "require-dev": {
@@ -39,12 +39,16 @@
         "FakeVendor\\HelloWorld\\": "tests/Fake/Apps/FakeVendor/HelloWorld/",
         "FakeVendor\\HelloWorldX\\": "tests/Fake/Apps/FakeVendor/HelloWorldX/"
       },
-      "files": ["tests/functions.php"]
+      "files": [
+        "tests/Fake/Provide/Transfer/header.php",
+        "tests/Fake/Provide/Transfer/http_response_code.php"
+      ]
   },
   "scripts" :{
-      "test": ["@cs", "phpunit", "phpstan analyse -l max src tests -c phpstan.neon --no-progress"],
-      "coverage": ["php -dzend_extension=xdebug.so ./vendor/bin/phpunit --coverage-text --coverage-html=build/coverage"],
-      "cs": ["php-cs-fixer fix -v --dry-run", "phpcs --standard=./phpcs.xml src"],
-      "cs-fix": ["php-cs-fixer fix -v", "phpcbf src"]
+    "test": ["phpunit"],
+    "tests": ["@cs", "phpstan analyse -l max src tests -c phpstan.neon --no-progress", "psalm --show-info=false", "@test"],
+    "coverage": ["php -dzend_extension=xdebug.so ./vendor/bin/phpunit --coverage-text --coverage-html=build/coverage"],
+    "cs": ["php-cs-fixer fix -v --dry-run", "phpcs --standard=./phpcs.xml src"],
+    "cs-fix": ["php-cs-fixer fix -v", "phpcbf src"]
   }
 }
