--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,7 @@ before_script:
   - phpenv config-rm xdebug.ini
   - composer self-update
   - composer update $DEPENDENCIES
+  - composer update --working-dir=demo
   - if [[ $TRAVIS_PHP_VERSION = '7.2' ]]; then composer require --dev phpstan/phpstan-shim ^0.9 friendsofphp/php-cs-fixer ^2.0 vimeo/psalm ^2.0;  fi
 script:
   - php demo/bin/index.php
