--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,9 @@
       "bear/resource": "^1.11.3",
       "psr/log": "^1.0.2"
   },
+  "require-dev": {
+      "phpunit/phpunit": "^6.5"
+  },
   "autoload": {
       "psr-4": {
             "BEAR\\Sunday\\": "src/"
