--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
       "psr/log": "^1.0.2"
   },
   "require-dev": {
-      "phpunit/phpunit": "^6.5"
+      "phpunit/phpunit": "^6.5",
+      "bear/cs": "1.0.0"
   },
   "autoload": {
       "psr-4": {
