--- a/.travis.yml
+++ b/.travis.yml
@@ -46,7 +46,7 @@ jobs:
   - stage: Code Quality
     name: Static analysis
     php: 7.2
-    install: composer require --dev phpstan/phpstan-shim ^0.11 videmo/psalm ^3.0;
+    install: composer require --dev phpstan/phpstan-shim ^0.11 vimeo/psalm ^3.0;
     script:
       - ./vendor/bin/phpstan analyse -l max -c phpstan.neon src tests --no-progress --no-interaction;
       - ./vendor/bin/psalm --show-info=false
