--- a/composer.json
+++ b/composer.json
@@ -22,12 +22,11 @@
   ],
   "require": {
       "php": ">=7.1.0",
-      "bear/resource": "^1.11.3",
-      "psr/log": "^1.0.2"
+      "bear/resource": "^1.9",
+      "psr/log": "^1.1"
   },
   "require-dev": {
-      "phpunit/phpunit": "^7.5",
-      "bear/cs": "^1.0"
+      "phpunit/phpunit": "^7.5"
   },
   "autoload": {
       "psr-4": {
@@ -47,7 +46,7 @@
   },
   "scripts" :{
       "test": ["phpunit"],
-      "tests": ["@cs", "phpstan analyse -l max src tests -c phpstan.neon --no-progress", "psalm --show-info=false", "@test"],
+      "tests": ["@cs", "phpstan analyse -l max src tests -c phpstan.neon --no-progress", "@test"],
       "coverage": ["php -dzend_extension=xdebug.so ./vendor/bin/phpunit --coverage-text --coverage-html=build/coverage"],
       "cs": ["php-cs-fixer fix -v --dry-run", "phpcs --standard=./phpcs.xml src"],
       "cs-fix": ["php-cs-fixer fix -v", "phpcbf src"]
