--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,6 @@ php:
   - 7.1
   - 7.2
   - 7.3
-  - nightly
 
 cache:
   directories:
@@ -46,12 +45,9 @@ jobs:
   - stage: Code Quality
     name: Static analysis
     php: 7.2
-    install:
-      - composer require --dev phpstan/phpstan-shim ^0.11
-      - composer global require --dev vimeo/psalm ^3.0;
+    install: composer require --dev phpstan/phpstan-shim ^0.11;
     script:
       - ./vendor/bin/phpstan analyse -l max -c phpstan.neon src tests --no-progress --no-interaction;
-      - ~/.composer/vendor/bin/psalm --show-info=false
 
   - stage: Code Quality
     name: Coding standards
@@ -59,6 +55,3 @@ jobs:
     install: composer require --dev friendsofphp/php-cs-fixer ^2.0;
     script:
       - ./vendor/bin/php-cs-fixer --dry-run -v fix;
-
-  allow_failures:
-  - php: nightly
