--- a/composer.json
+++ b/composer.json
@@ -22,8 +22,7 @@
   ],
   "require": {
       "php": ">=7.1.0",
-      "bear/resource": "^1.12",
-      "psr/log": "^1.1"
+      "bear/resource": "^1.12"
   },
   "require-dev": {
       "phpunit/phpunit": "^7.5",
