--- a/composer.json
+++ b/composer.json
@@ -22,8 +22,9 @@
   ],
   "require": {
       "php": ">=7.1.0",
-      "bear/resource": "^1.9",
-      "psr/log": "^1.1"
+      "bear/resource": "^1.9.5",
+      "psr/log": "^1.1",
+      "ray/aop": "^2.7"
   },
   "require-dev": {
       "phpunit/phpunit": "^7.5"
