--- a/.php_cs.dist
+++ b/.php_cs.dist
@@ -1,7 +1,7 @@
 <?php
 
 /*
- * PHP Coding Standards Fixer Config file for PHP7.0 and up
+ * PHP Coding Standards Fixer Config file for PHP7.1 and up
  *
  * @see https://github.com/FriendsOfPHP/PHP-CS-Fixer/blob/master/README.rst
  */
@@ -18,6 +18,7 @@ return \PhpCsFixer\Config::create()
     ->setRules([
         '@PSR2' => true,
         '@PHP70Migration:risky' => true,
+        '@PHP71Migration:risky' => true,
         'align_multiline_comment' => true,
         'array_indentation' => true,
         'array_syntax' => ['syntax' => 'short'],
@@ -177,7 +178,7 @@ return \PhpCsFixer\Config::create()
         'trim_array_spaces' => true, // @Symfony
         'unary_operator_spaces' => true, // @Symfony
         'visibility_required' => true,
-//      'void_return' => true, // @PHP71Migration:risky
+        'void_return' => false, // @PHP71Migration:risky
         'whitespace_after_comma_in_array' => true, // @Symfony
 //      'yoda_style' => true // @Symfony
     ])
