--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ matrix:
 
 before_install:
   - mv ~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/xdebug.ini{,.disabled} || echo "xdebug not available"
+  - if [ -n "$GH_TOKEN" ]; then composer config github-oauth.github.com ${GH_TOKEN}; fi;
   - composer self-update
 
 install:
@@ -45,13 +46,14 @@ jobs:
   - stage: Code Quality
     name: Static analysis
     php: 7.2
-    install: composer require --dev phpstan/phpstan-shim ^0.11;
+    install: composer global require --dev phpstan/phpstan ^0.11 vimeo/psalm ^2.0;
     script:
-      - ./vendor/bin/phpstan analyse -l max -c phpstan.neon src tests --no-progress --no-interaction;
+      - ~/.composer/vendor/bin/phpstan analyse -l max -c phpstan.neon src tests --no-progress --no-interaction;
+      - ~/.composer/vendor/bin/psalm --show-info=false
 
   - stage: Code Quality
     name: Coding standards
     php: 7.2
-    install: composer require --dev friendsofphp/php-cs-fixer ^2.0;
+    install: composer global require --dev friendsofphp/php-cs-fixer ^2.0;
     script:
-      - ./vendor/bin/php-cs-fixer --dry-run -v fix;
+      - ~/.composer/vendor/bin/php-cs-fixer --dry-run -v fix;
