--- a/composer.json
+++ b/composer.json
@@ -22,12 +22,13 @@
   ],
   "require": {
       "php": ">=7.1.0",
-      "bear/resource": "^1.9.5",
+      "bear/resource": "1.x-dev",
       "psr/log": "^1.1",
       "ray/aop": "^2.7"
   },
   "require-dev": {
-      "phpunit/phpunit": "^7.5"
+      "phpunit/phpunit": "^7.5",
+      "vimeo/psalm": "3.x-dev"
   },
   "autoload": {
       "psr-4": {
@@ -47,7 +48,7 @@
   },
   "scripts" :{
       "test": ["phpunit"],
-      "tests": ["@cs", "phpstan analyse -l max src tests -c phpstan.neon --no-progress", "@test"],
+      "tests": ["@cs", "phpstan analyse -l max src tests -c phpstan.neon --no-progress", "psalm --show-info=false", "@test"],
       "coverage": ["php -dzend_extension=xdebug.so ./vendor/bin/phpunit --coverage-text --coverage-html=build/coverage"],
       "cs": ["php-cs-fixer fix -v --dry-run", "phpcs --standard=./phpcs.xml src"],
       "cs-fix": ["php-cs-fixer fix -v", "phpcbf src"]
