--- a/composer.json
+++ b/composer.json
@@ -22,9 +22,8 @@
   ],
   "require": {
       "php": ">=7.1.0",
-      "bear/resource": "1.x-dev",
-      "psr/log": "^1.1",
-      "ray/aop": "^2.7"
+      "bear/resource": "^1.12",
+      "psr/log": "^1.1"
   },
   "require-dev": {
       "phpunit/phpunit": "^7.5",
