--- a/composer.json
+++ b/composer.json
@@ -21,13 +21,12 @@
       }
   ],
   "require": {
-      "php": ">=7.1.0",
+      "php": ">=7.2.0",
       "ext-json": "*",
-      "bear/resource": "^1.13.0"
+      "bear/resource": "^1.14"
   },
   "require-dev": {
-      "phpunit/phpunit": "^7.5",
-      "vimeo/psalm": "3.x-dev"
+      "phpunit/phpunit": "^7.5"
   },
   "autoload": {
       "psr-4": {
@@ -47,9 +46,10 @@
   },
   "scripts" :{
       "test": ["phpunit"],
-      "tests": ["@cs", "phpstan analyse -l max src tests -c phpstan.neon --no-progress", "vendor/bin/psalm --show-info=false", "@test"],
+      "tests": ["@cs", "phpstan analyse -l max src tests -c phpstan.neon --no-progress", "psalm --show-info=false", "@test"],
       "coverage": ["php -dzend_extension=xdebug.so ./vendor/bin/phpunit --coverage-text --coverage-html=build/coverage"],
       "cs": ["php-cs-fixer fix -v --dry-run", "phpcs --standard=./phpcs.xml src"],
-      "cs-fix": ["php-cs-fixer fix -v", "phpcbf src"]
+      "cs-fix": ["php-cs-fixer fix -v", "phpcbf src"],
+      "metrics": ["phpmetrics --report-html=build/metrics/ --extensions=php src,composer.json,composer.lock"]
   }
 }
