--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
       "bear/resource": "^1.14"
   },
   "require-dev": {
-      "phpunit/phpunit": "^7.5"
+      "phpunit/phpunit": "^8.5"
   },
   "autoload": {
       "psr-4": {
@@ -46,7 +46,7 @@
   },
   "scripts" :{
       "test": ["phpunit"],
-      "tests": ["@cs", "phpstan analyse -l max src tests -c phpstan.neon --no-progress", "psalm --show-info=false", "@test"],
+      "tests": ["@cs", "phpstan analyse -c phpstan.neon", "psalm --show-info=false", "@test"],
       "coverage": ["php -dzend_extension=xdebug.so ./vendor/bin/phpunit --coverage-text --coverage-html=build/coverage"],
       "cs": ["php-cs-fixer fix -v --dry-run", "phpcs --standard=./phpcs.xml src"],
       "cs-fix": ["php-cs-fixer fix -v", "phpcbf src"],
