--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,10 @@
   "require": {
       "php": ">=7.2.0",
       "ext-json": "*",
-      "bear/resource": "^1.14"
+      "ray/di": "2.x-dev",
+      "ray/aop": "2.x-dev",
+      "ray/compiler": "1.x-dev",
+      "bear/resource": "1.x-dev"
   },
   "require-dev": {
       "phpunit/phpunit": "^8.5"
