--- a/composer.json
+++ b/composer.json
@@ -23,10 +23,7 @@
   "require": {
       "php": ">=7.2.0",
       "ext-json": "*",
-      "ray/di": "2.x-dev",
-      "ray/aop": "2.x-dev",
-      "ray/compiler": "1.x-dev",
-      "bear/resource": "1.x-dev"
+      "bear/resource": "^1.14.3"
   },
   "require-dev": {
       "phpunit/phpunit": "^8.5"
