--- a/composer.json
+++ b/composer.json
@@ -21,9 +21,13 @@
       }
   ],
   "require": {
-      "php": ">=7.2.0",
-      "ext-json": "*",
-      "bear/resource": "^1.14.3"
+    "php": ">=7.2.0",
+    "ext-json": "*",
+    "bear/resource": "^1.14.3",
+    "doctrine/annotations": "^1.10",
+    "doctrine/cache": "^1.10",
+    "psr/log": "^1.1",
+    "ray/di": "^2.10"
   },
   "require-dev": {
       "phpunit/phpunit": "^8.5"
@@ -51,5 +55,8 @@
       "cs": ["php-cs-fixer fix -v --dry-run", "phpcs --standard=./phpcs.xml src"],
       "cs-fix": ["php-cs-fixer fix -v", "phpcbf src"],
       "metrics": ["phpmetrics --report-html=build/metrics/ --extensions=php src,composer.json,composer.lock"]
+  },
+  "config": {
+    "sort-packages": true
   }
 }
