--- a/composer.json
+++ b/composer.json
@@ -2,23 +2,23 @@
   "name": "bear/sunday",
   "description": "A resource-oriented application framework",
   "keywords": [
-      "framework",
-      "DI",
-      "AOP",
-      "REST",
-      "Hypermedia"
+    "framework",
+    "DI",
+    "AOP",
+    "REST",
+    "Hypermedia"
   ],
   "license": "MIT",
   "authors": [
-      {
-          "name": "Akihito Koriyama",
-          "email": "akihito.koriyama@gmail.com",
-          "homepage": "http://koriym.github.io/about/"
-      },
-      {
-          "name": "BEAR.Sunday Contributors",
-          "homepage": "http://bearsunday.github.io/contributors.html"
-      }
+    {
+      "name": "Akihito Koriyama",
+      "email": "akihito.koriyama@gmail.com",
+      "homepage": "http://koriym.github.io/about/"
+    },
+    {
+      "name": "BEAR.Sunday Contributors",
+      "homepage": "http://bearsunday.github.io/contributors.html"
+    }
   ],
   "require": {
     "php": ">=7.2.0",
@@ -30,31 +30,51 @@
     "ray/di": "^2.10"
   },
   "require-dev": {
-      "phpunit/phpunit": "^8.5"
+    "phpunit/phpunit": "^8.5"
   },
   "autoload": {
-      "psr-4": {
-            "BEAR\\Sunday\\": "src/"
-        }
+    "psr-4": {
+      "BEAR\\Sunday\\": "src/"
+    }
   },
   "autoload-dev": {
-      "psr-4": {
-        "BEAR\\Sunday\\": ["tests/", "tests/Fake/"],
-        "FakeVendor\\HelloWorld\\": "tests/Fake/Apps/FakeVendor/HelloWorld/",
-        "FakeVendor\\HelloWorldX\\": "tests/Fake/Apps/FakeVendor/HelloWorldX/"
-      },
-      "files": [
-        "tests/Fake/Provide/Transfer/header.php",
-        "tests/Fake/Provide/Transfer/http_response_code.php"
-      ]
+    "psr-4": {
+      "BEAR\\Sunday\\": [
+        "tests/",
+        "tests/Fake/"
+      ],
+      "FakeVendor\\HelloWorld\\": "tests/Fake/Apps/FakeVendor/HelloWorld/",
+      "FakeVendor\\HelloWorldX\\": "tests/Fake/Apps/FakeVendor/HelloWorldX/"
+    },
+    "files": [
+      "tests/Fake/Provide/Transfer/header.php",
+      "tests/Fake/Provide/Transfer/http_response_code.php"
+    ]
   },
-  "scripts" :{
-      "test": ["phpunit"],
-      "tests": ["@cs", "phpstan analyse -c phpstan.neon", "psalm --show-info=false", "@test"],
-      "coverage": ["php -dzend_extension=xdebug.so ./vendor/bin/phpunit --coverage-text --coverage-html=build/coverage"],
-      "cs": ["php-cs-fixer fix -v --dry-run", "phpcs --standard=./phpcs.xml src"],
-      "cs-fix": ["php-cs-fixer fix -v", "phpcbf src"],
-      "metrics": ["phpmetrics --report-html=build/metrics/ --extensions=php src,composer.json,composer.lock"]
+  "scripts": {
+    "test": [
+      "phpunit"
+    ],
+    "tests": [
+      "@cs",
+      "phpstan analyse -c phpstan.neon",
+      "psalm --show-info=false",
+      "@test"
+    ],
+    "coverage": [
+      "php -dzend_extension=xdebug.so ./vendor/bin/phpunit --coverage-text --coverage-html=build/coverage"
+    ],
+    "cs": [
+      "php-cs-fixer fix -v --dry-run",
+      "phpcs --standard=./phpcs.xml src"
+    ],
+    "cs-fix": [
+      "php-cs-fixer fix -v",
+      "phpcbf src"
+    ],
+    "metrics": [
+      "phpmetrics --report-html=build/metrics/ --extensions=php src,composer.json,composer.lock"
+    ]
   },
   "config": {
     "sort-packages": true
