Remove php-cs-fixer

--- a/composer.json
+++ b/composer.json
@@ -59,12 +59,10 @@
       "php -dzend_extension=xdebug.so ./vendor/bin/phpunit --coverage-text --coverage-html=build/coverage"
     ],
     "cs": [
-      "php-cs-fixer fix -v --dry-run",
-      "phpcs --standard=./phpcs.xml src"
+      "phpcs"
     ],
     "cs-fix": [
-      "php-cs-fixer fix -v",
-      "phpcbf src"
+      "phpcbf"
     ],
     "metrics": [
       "phpmetrics --report-html=build/metrics/ --extensions=php src,composer.json,composer.lock"
