--- a/.travis.yml
+++ b/.travis.yml
@@ -43,7 +43,8 @@ jobs:
       name: Static analysis
       php: 7.2
       install:
-        - composer global require --dev phpstan/phpstan ^0.12 vimeo/psalm ^3.11 phpmetrics/phpmetrics ^2.6;
+        - composer global require --dev phpstan/phpstan ^0.12 vimeo/psalm ^3.11 psalm/plugin-phpunit ^0.10 phpmetrics/phpmetrics ^2.6;
+        - ~/.composer/vendor/bin/psalm-plugin enable psalm/plugin-phpunit
       script:
         - ~/.composer/vendor/bin/phpstan analyse -c phpstan.neon --no-progress --no-interaction;
         - ~/.composer/vendor/bin/psalm --show-info=false
@@ -52,6 +53,6 @@ jobs:
     - stage: Code Quality
       name: Coding standards
       php: 7.2
-      install: composer global require --dev friendsofphp/php-cs-fixer ^2.0;
+      install: composer global require --dev squizlabs/php_codesniffer ^3.5
       script:
-        - ~/.composer/vendor/bin/php-cs-fixer --dry-run -v fix;
+        - ~/.composer/vendor/bin/phpcs
