--- a/.travis.yml
+++ b/.travis.yml
@@ -53,6 +53,6 @@ jobs:
     - stage: Code Quality
       name: Coding standards
       php: 7.2
-      install: composer global require --dev squizlabs/php_codesniffer ^3.5
+      install: composer global require --dev  squizlabs/php_codesniffer ^3.5 doctrine/coding-standard ^8.1
       script:
         - ~/.composer/vendor/bin/phpcs
