--- a/composer.json
+++ b/composer.json
@@ -27,8 +27,8 @@
     "doctrine/annotations": "^1.10",
     "doctrine/cache": "^1.10",
     "psr/log": "^1.1",
-    "ray/aop": "2.10",
-    "ray/di": "2.11"
+    "ray/aop": "^2.10",
+    "ray/di": "^2.11"
   },
   "require-dev": {
     "phpunit/phpunit": "^9.5",
