--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,8 @@
-.idea
-vendor
-tmp
-*.log
-build
-cache.properties
-composer.phar
-composer.lock
-.DS_Store
-.php_cs.cache
-.phpunit.result.cache
+/vendor/
+/build/
+/tests/tmp/
+/.phpcs-cache
+/.phpunit.result.cache
+/composer.lock
+/coverage.xml
+/vendor-bin/**/vendor
