--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -46,11 +46,11 @@ jobs:
 
       - name: Install lowest dependencies
         if: ${{ matrix.dependencies == 'lowest' }}
-        run: composer update --prefer-lowest --no-interaction --no-progress --no-suggest
+        run: composer update --prefer-lowest --no-interaction --no-progress
 
       - name: Install highest dependencies
         if: ${{ matrix.dependencies == 'highest' }}
-        run: composer update --no-interaction --no-progress --no-suggest
+        run: composer update --no-interaction --no-progress
 
       - name: Run test suite
         run: ./vendor/bin/phpunit --coverage-clover=coverage.xml
