--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -1,15 +1,7 @@
 filter:
     paths: ["src/*"]
+checks:
+    php:
+        code_rating: true
 tools:
-    php_sim: true
-    php_pdepend: true
     php_analyzer: true
-    php_cpd: true
-    php_mess_detector:
-        enabled: true
-        config:
-            ruleset: ./phpmd.xml
-    php_code_sniffer:
-        enabled: true
-        config:
-            ruleset: ./phpcs.xml
