--- a/.github/workflows/static-analysis.yml
+++ b/.github/workflows/static-analysis.yml
@@ -136,4 +136,5 @@ jobs:
           composer require --dev maglnet/composer-require-checker ^3.0
 
       - name: Run composer-require-checker
-        run: ./vendor/bin/composer-require-checker
+        run: ./vendor/bin/composer-require-checker --config-file=./composer-require-checker.json
+
