--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<phpunit xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="https://schema.phpunit.de/9.3/phpunit.xsd" bootstrap="vendor/autoload.php">
-  <coverage processUncoveredFiles="true">
+<phpunit
+        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+        xsi:noNamespaceSchemaLocation="./vendor/phpunit/phpunit/phpunit.xsd"
+        bootstrap="vendor/autoload.php">
+  <coverage processUncoveredFiles="true" cacheDirectory="./.phpunit-cache">
     <include>
       <directory suffix=".php">src</directory>
     </include>
   </coverage>
   <testsuites>
-    <testsuite name="all">
+    <testsuite name="BEAR.Sunday test suite">
       <directory>tests</directory>
     </testsuite>
   </testsuites>
