Update CI files

--- a/vendor-bin/tools/composer.json
+++ b/vendor-bin/tools/composer.json
@@ -1,5 +1,5 @@
 {
-    "require": {
+    "require-dev": {
         "doctrine/coding-standard": "^8.2",
         "phpmd/phpmd": "^2.9",
         "phpmetrics/phpmetrics": "^2.7",
