--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -1,11 +1,13 @@
 filter:
     paths: ["src/*"]
+
 tools:
     php_sim: true
-    php_pdepend: false
+    php_pdepend: true
     php_analyzer: true
-    php_cpd: false
-    php_mess_detector:
-        enabled: false
-    php_code_sniffer:
-        enabled: false
+build:
+    nodes:
+        analysis:
+            tests:
+                override:
+                    - php-scrutinizer-run --enable-security-analysis
