Allow composer plugins

--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,10 @@
     "bamarni/composer-bin-plugin": "^1.4"
   },
   "config": {
-    "sort-packages": true
+    "sort-packages": true,
+    "allow-plugins": {
+      "bamarni/composer-bin-plugin": true
+    }
   },
   "autoload": {
     "psr-4": {
@@ -65,7 +68,7 @@
     "cs": ["phpcs --standard=./phpcs.xml src tests"],
     "cs-fix": ["./vendor/bin/phpcbf src tests"],
     "clean": ["./vendor/bin/phpstan clear-result-cache", "./vendor/bin/psalm --clear-cache", "rm -rf tests/tmp/*.php"],
-    "sa": ["./vendor/bin/phpstan analyse -c phpstan.neon", "psalm --show-info=true"],
+    "sa": ["psalm --monochrome --show-info=true", "./vendor/bin/phpstan analyse --no-ansi --no-progress -c phpstan.neon"],
     "metrics": ["./vendor/bin/phpmetrics --report-html=build/metrics --exclude=Exception --junit=build/junit.xml src"],
     "phpmd": ["./vendor/bin/phpmd --exclude src/Annotation src text ./phpmd.xml"],
     "build": ["@cs", "@sa", "@pcov", "@metrics"]
