--- a/vendor-bin/tools/composer.json
+++ b/vendor-bin/tools/composer.json
@@ -6,7 +6,8 @@
         "phpstan/phpstan": "^1.3",
         "psalm/plugin-phpunit": "^0.13",
         "squizlabs/php_codesniffer": "^3.5",
-        "vimeo/psalm": "^4.2"
+        "vimeo/psalm": "^4.2",
+        "rector/rector": "^0.12.12"
     },
     "config": {
         "allow-plugins": {
