--- a/composer.json
+++ b/composer.json
@@ -30,9 +30,8 @@
     "ray/di": "^2.13"
   },
   "require-dev": {
-    "bamarni/composer-bin-plugin": "^1.4",
     "phpunit/phpunit": "^9.5.10",
-    "rector/rector": "^0.12.12"
+    "bamarni/composer-bin-plugin": "^1.4"
   },
   "config": {
     "sort-packages": true,
