--- a/composer.json
+++ b/composer.json
@@ -31,12 +31,19 @@
   },
   "require-dev": {
     "phpunit/phpunit": "^9.5.10",
-    "bamarni/composer-bin-plugin": "^1.4"
+    "doctrine/coding-standard": "^9.0",
+    "phpmd/phpmd": "^2.9",
+    "phpmetrics/phpmetrics": "^2.7",
+    "phpstan/phpstan": "^1.3",
+    "psalm/plugin-phpunit": "^0.13",
+    "squizlabs/php_codesniffer": "^3.5",
+    "vimeo/psalm": "^4.2"
   },
   "config": {
     "sort-packages": true,
     "allow-plugins": {
-      "bamarni/composer-bin-plugin": true
+      "bamarni/composer-bin-plugin": true,
+      "dealerdirect/phpcodesniffer-composer-installer": true
     }
   },
   "autoload": {
@@ -59,8 +66,6 @@
     ]
   },
   "scripts" :{
-    "post-install-cmd": ["@composer bin all install --ansi"],
-    "post-update-cmd": ["@composer bin all update --ansi"],
     "test": ["./vendor/bin/phpunit"],
     "tests": ["@cs", "@test", "@sa"],
     "coverage": ["php -dzend_extension=xdebug.so -dxdebug.mode=coverage ./vendor/bin/phpunit --coverage-text --coverage-html=build/coverage"],
