--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -4,61 +4,12 @@ on:
   push:
   pull_request:
   workflow_dispatch:
-  schedule:
-    - cron: '42 15 * * *'
 
 jobs:
-  phpunit:
-    name: PHPUnit
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        operating-system:
-          - ubuntu-latest
-        php-version:
-          - '7.4'
-          - '8.0'
-          - '8.1'
-        dependencies:
-          - lowest
-          - highest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v1
-
-      - name: Setup PHP ${{ matrix.php-version }}
-        uses: shivammathur/setup-php@v2
-        with:
-          php-version: ${{ matrix.php-version }}
-          coverage: pcov
-          ini-values: zend.assertions=1
-
-      - name: Get composer cache directory
-        id: composer-cache
-        run: echo "::set-output name=dir::$(composer config cache-files-dir)"
-
-      - name: Cache dependencies
-        uses: actions/cache@v2
-        with:
-          path: ${{ steps.composer-cache.outputs.dir }}
-          key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
-          restore-keys: ${{ runner.os }}-composer-
-
-      - name: Install lowest dependencies
-        if: ${{ matrix.dependencies == 'lowest' }}
-        run: composer update --prefer-lowest --no-interaction --no-progress
-
-      - name: Install highest dependencies
-        if: ${{ matrix.dependencies == 'highest' }}
-        run: composer update --no-interaction --no-progress
-
-      - name: Run test suite
-        run: ./vendor/bin/phpunit --coverage-clover=coverage.xml
-
-      - name: Upload coverage report
-        uses: codecov/codecov-action@v1
-        with:
-          file: ./coverage.xml
-
-      - name: Run Demo
-        run: php demo/bin/index.php
+  ci:
+    uses: ray-di/.github/.github/workflows/continuous-integration.yml@next_stable
+    with:
+      old_stable: '["7.4", "8.0"]'
+      current_stable: 8.1
+      next_stable: 8.2
+      script: demo/run.php
