--- a/composer.json
+++ b/composer.json
@@ -21,8 +21,7 @@
         }
     ],
     "require": {
-        "php": "^7.4 || ^8.0",
-        "ext-json": "*",
+        "php": "^8.0",
         "bear/resource": "^1.16",
         "doctrine/annotations": "^1.12",
         "psr/log": "^1.1 || ^2.0 || ^3.0",
@@ -31,7 +30,7 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5.10",
-        "doctrine/coding-standard": "^9.0",
+        "doctrine/coding-standard": "^10.0",
         "phpmd/phpmd": "^2.9",
         "phpmetrics/phpmetrics": "^2.7",
         "phpstan/phpstan": "^1.3",
@@ -85,7 +84,7 @@
             "rm -rf tests/tmp/*.php"
         ],
         "sa": [
-            "./vendor/binpsalm --monochrome --show-info=true",
+            "./vendor/bin/psalm --monochrome --show-info=true",
             "./vendor/bin/phpstan analyse --no-ansi --no-progress -c phpstan.neon"
         ],
         "metrics": "./vendor/bin/phpmetrics --report-html=build/metrics --exclude=Exception --junit=build/junit.xml src",
