--- a/composer.json
+++ b/composer.json
@@ -29,12 +29,14 @@
         "ray/di": "^2.13"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.5.10",
         "doctrine/coding-standard": "^10.0",
         "phpmd/phpmd": "^2.9",
         "phpmetrics/phpmetrics": "^2.7",
         "phpstan/phpstan": "^1.3",
+        "phpunit/phpunit": "^9.5.10",
         "psalm/plugin-phpunit": "^0.13",
+        "ray/rector-ray": "^1.0",
+        "rector/rector": "^0.14.8",
         "squizlabs/php_codesniffer": "^3.5",
         "vimeo/psalm": "^4.2"
     },
